# Diploma_work

./: .env_sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
users/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
users/fixtures/: users.json
users/migrations/: 0001_initial.py  0002_user_activate_code.py
users/templates/: profile.html
users/templates/users/: login.html  profile.html
